--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,7 @@
         app:layout_constraintVertical_bias="0.043" />
 
     <ListView
+        android:id="@+id/petLV"
         android:layout_width="409dp"
         android:layout_height="750dp"
         android:layout_marginStart="1dp"
